@@ -127,7 +127,8 @@ kpathsea_fsyscp_xfopen (kpathsea kpse, const char *filename, const char *mode)
   Windows, if it really exists and input name is given in
   full-absolute path in a command line.
   /./ , /../, \.\, \..\ should be excluded. (2020/06/06)
-  More than one directory separators should be excluded. (2020/10/24)
+  More than one adjacent directory separators should be
+  excluded. (2020/10/24)
 */
     fnn = xmalloc(len + 10);
     p = strstr(filename, ".\\");
@@ -205,7 +206,8 @@ kpathsea_fsyscp_fopen (kpathsea kpse, const char *filename, const char *mode)
   Windows, if it really exists and input name is given in
   full-absolute path in a command line.
   /./ , /../, \.\, \..\ should be excluded. (2020/06/06)
-  More than one directory separators should be excluded. (2020/10/24)
+  More than one adjacent directory separators should be
+  excluded. (2020/10/24)
 */
     fnn = xmalloc(len + 10);
     p = strstr(filename, ".\\");
