@@ -1,7 +1,8 @@
 2020-10-24  Akira Kakuto  <kakuto@w32tex.org>
 
-	* readable.c, knj.c: More than one directory separators in
-	filename+2 should not exist in \\?\ form of absolute path.
+	* readable.c, knj.c: More than one adjacent directory
+	separators in filename+2 should not exist in \\?\ form of
+	absolute path.
 
 2020-08-26  Karl Berry  <karl@tug.org>
 
